# aes-in-c

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  README.rst  toolchain-clang.cmake  toolchain-gcc.cmake
.github/workflows/: static-analysis.yml  unit-testing.yml
include/: aes.h
src/: aes.c  main  main.c
static-analysis/: index.html  stats.html
tests/: test_aes.c
